--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <!-- SEO -->
-  <meta property="og:url" content="https://KWAK.com/">
+  <meta property="og:url" content="https://bamtting.github.io/my-portfolio/">
   <meta property="og:type" content="website">
   <meta property="og:description" content="웹 퍼블리셔,UX/UI 디자이너 곽승민 포트폴리오입니다.">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -227,8 +227,7 @@
       <div class="contact-nember"><img src="images/phone.png" alt="전화번호">010.7472.8414</div>
       <div class="contact-mail"><img src="images/email1.png" alt="이메일">ekekektmdals@gmail.com</div>
       </div>
-      <div class="contact-about">"
-        열정과 성장을 토대로 끊임없이 진화하는 UX/UI 디자이너 곽승민입니다. 포트폴리오를 봐주셔서 감사합니다 :) "</div>
+      <div class="contact-about">"포트폴리오를 봐주셔서 감사합니다 :) "</div>
       <div class="contact-cp">본 페이지는 상업적 목적이 아닌
         개인 포트폴리오용으로 제작되었습니다. <br>© 2023 Kwak-seung-min All Rights Reserved. <br>해당 사이트는 1980*1080해상도에 최적화 되어있습니다.</div>
     </div>
