--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <div class="contact-nember"><img src="images/phone.png" alt="전화번호">010.7472.8414</div>
       <div class="contact-mail"><img src="images/email1.png" alt="이메일">ekekektmdals@gmail.com</div>
       </div>
-      <div class="contact-about">"포트폴리오를 봐주셔서 감사합니다 :) "</div>
+      <div class="contact-about">"열정과 끈기를 토대로 끊임없이 성장하겠습니다. 포트폴리오를 봐주셔서 감사합니다 :) "</div>
       <div class="contact-cp">본 페이지는 상업적 목적이 아닌
         개인 포트폴리오용으로 제작되었습니다. <br>© 2023 Kwak-seung-min All Rights Reserved. <br>해당 사이트는 1980*1080해상도에 최적화 되어있습니다.</div>
     </div>
